--- a/package.json
+++ b/package.json
@@ -13,22 +13,33 @@
   "dependencies": {
     "@geist-ui/icons": "^1.0.2",
     "@next/font": "^14.0.0",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-use-controllable-state": "^1.2.2",
+    "@shikijs/transformers": "^3.13.0",
+    "class-variance-authority": "^0.7.1",
+    "geist": "^1.5.1",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.546.0",
     "next": "^14.0.0",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "rehype-autolink-headings": "^7.0.0",
-    "rehype-prism-plus": "^1.6.0",
     "rehype-slug": "^6.0.0",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "shiki": "^3.13.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/node": "24.8.1",
     "autoprefixer": "^10.4.16",
     "globby": "^11.0.4",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.0"
+    "prettier": "^3.6.2",
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.9.3"
   }
 }
