--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "24.8.1",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.13",
     "globby": "^11.0.4",
     "postcss": "^8.4.31",
     "prettier": "^3.6.2",
